--- a/cart.html
+++ b/cart.html
@@ -11,6 +11,7 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      async
     />
     <!-- Bootstrap CSS v5.2.1 -->
     <link
@@ -18,14 +19,15 @@
       rel="stylesheet"
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
+      async
     />
-    <script src="storeitems.js" async></script>
+    <script src="storeitems.js"></script>
     <script src="store.js" async></script>
   </head>
 
   <body id="cart">
     <header
-      class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
+      class="d-flex flex-wrap justify-content-center align-items-center py-3 mb-4 border-bottom"
     >
       <a
         href="/"
@@ -64,134 +66,7 @@
                   <th style="width: 16%"></th>
                 </tr>
               </thead>
-              <tbody class="shopping-cart-items">
-                <tr class="shopping-cart-item">
-                  <td data-th="Product">
-                    <div class="row">
-                      <div class="col-md-3 text-start">
-                        <img
-                          src="./images/1-1.webp"
-                          alt=""
-                          class="img-fluid d-none d-md-block rounded mb-2 shadow"
-                        />
-                      </div>
-                      <div class="col-md-9 text-start mt-sm-2">
-                        <h4>Product Name</h4>
-                        <p class="font-weight-light">Brand &amp; Name</p>
-                      </div>
-                    </div>
-                  </td>
-                  <td data-th="Price">$49.00</td>
-                  <td data-th="Quantity">
-                    <input
-                      type="number"
-                      class="form-control form-control-lg text-center cart-item-quantity-input"
-                      value="1"
-                      aria-label="Item amount"
-                    />
-                  </td>
-                  <td class="actions" data-th="">
-                    <div class="text-end">
-                      <button
-                        class="btn btn-white border-secondary bg-white btn-md mb-2"
-                        aria-label="Update cart item"
-                      >
-                        <i class="fas fa-sync"></i>
-                      </button>
-                      <button
-                        class="btn btn-white border-secondary bg-white btn-md mb-2 delete-cart-item"
-                        aria-label="Delete cart item"
-                      >
-                        <i class="fas fa-trash"></i>
-                      </button>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td data-th="Product">
-                    <div class="row">
-                      <div class="col-md-3 text-start">
-                        <img
-                          src="./images/2-1.webp"
-                          alt=""
-                          class="img-fluid d-none d-md-block rounded mb-2 shadow"
-                        />
-                      </div>
-                      <div class="col-md-9 text-start mt-sm-2">
-                        <h4>Red Velvet Cupcakes</h4>
-                        <p class="font-weight-light">Brand &amp; Name</p>
-                      </div>
-                    </div>
-                  </td>
-                  <td data-th="Price">$49.00</td>
-                  <td data-th="Quantity">
-                    <input
-                      type="number"
-                      class="form-control form-control-lg text-center cart-item-quantity-input"
-                      value="1"
-                      aria-label="Item amount"
-                    />
-                  </td>
-                  <td class="actions" data-th="">
-                    <div class="text-end">
-                      <button
-                        class="btn btn-white border-secondary bg-white btn-md mb-2"
-                        aria-label="Update cart item"
-                      >
-                        <i class="fas fa-sync"></i>
-                      </button>
-                      <button
-                        class="btn btn-white border-secondary bg-white btn-md mb-2 delete-cart-item"
-                        aria-label="Delete cart item"
-                      >
-                        <i class="fas fa-trash"></i>
-                      </button>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td data-th="Product">
-                    <div class="row">
-                      <div class="col-md-3 text-start">
-                        <img
-                          src="./images/3-1.webp"
-                          alt=""
-                          class="img-fluid d-none d-md-block rounded mb-2 shadow"
-                        />
-                      </div>
-                      <div class="col-md-9 text-start mt-sm-2">
-                        <h4>Product Name</h4>
-                        <p class="font-weight-light">Brand &amp; Name</p>
-                      </div>
-                    </div>
-                  </td>
-                  <td data-th="Price">$49.00</td>
-                  <td data-th="Quantity">
-                    <input
-                      type="number"
-                      class="form-control form-control-lg text-center cart-item-quantity-input"
-                      value="1"
-                      aria-label="Item amount"
-                    />
-                  </td>
-                  <td class="actions" data-th="">
-                    <div class="text-end">
-                      <button
-                        class="btn btn-white border-secondary bg-white btn-md mb-2"
-                        aria-label="Update cart item"
-                      >
-                        <i class="fas fa-sync"></i>
-                      </button>
-                      <button
-                        class="btn btn-white border-secondary bg-white btn-md mb-2 delete-cart-item"
-                        aria-label="Delete cart item"
-                      >
-                        <i class="fas fa-trash"></i>
-                      </button>
-                    </div>
-                  </td>
-                </tr>
-              </tbody>
+              <tbody class="shopping-cart-items"></tbody>
             </table>
             <div class="float-end text-end">
               <h4>Totalt:</h4>
@@ -218,6 +93,50 @@
     <footer>
       <!-- place footer here -->
     </footer>
+    <template id="cart-item-template">
+      <tr class="shopping-cart-item">
+        <td data-th="Product">
+          <div class="row">
+            <div class="col-md-3 text-start">
+              <img
+                src=""
+                alt=""
+                class="img-fluid d-none d-md-block rounded mb-2 shadow cart-item-image"
+              />
+            </div>
+            <div class="col-md-9 text-start mt-sm-2">
+              <h4 class="cart-item-title"></h4>
+              <p class="font-weight-light cart-item-category"></p>
+            </div>
+          </div>
+        </td>
+        <td data-th="Price" class="cart-item-price"></td>
+        <td data-th="Quantity">
+          <input
+            type="number"
+            class="form-control form-control-lg text-center cart-item-quantity-input"
+            value=""
+            aria-label="Item amount"
+          />
+        </td>
+        <td class="actions" data-th="">
+          <div class="text-end">
+            <button
+              class="btn btn-white border-secondary bg-white btn-md mb-2"
+              aria-label="Update cart item"
+            >
+              <i class="fas fa-sync"></i>
+            </button>
+            <button
+              class="btn btn-white border-secondary bg-white btn-md mb-2 delete-cart-item"
+              aria-label="Delete cart item"
+            >
+              <i class="fas fa-trash"></i>
+            </button>
+          </div>
+        </td>
+      </tr>
+    </template>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
