--- a/store.html
+++ b/store.html
@@ -62,7 +62,7 @@
         >
           <ul class="navbar-nav fw-semibold align-items-center">
             <li class="nav-item">
-              <a href="#" class="nav-link" aria-current="page">Hem</a>
+              <a href="/" class="nav-link" aria-current="page">Hem</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link active">Produkter</a>
@@ -76,8 +76,12 @@
                   height="80"
               /></a>
             </li>
-            <li class="nav-item"><a href="#" class="nav-link">Om oss</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Recept</a></li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">Om oss</a>
+            </li>
+            <li class="nav-item">
+              <a href="recipes.html" class="nav-link">Recept</a>
+            </li>
             <li class="nav-item">
               <a href="cart.html" class="nav-link">
                 <div class="cart nav-item">
