--- a/index.html
+++ b/index.html
@@ -22,59 +22,68 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white">
-        <!-- Container wrapper -->
-        <div class="container-fluid">
-          <!-- Toggle button -->
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbar"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <!-- Collapsible wrapper -->
-          <div class="collapse navbar-collapse justify-content-center">
-            <!-- Left links -->
-            <ul class="navbar-nav fw-semibold align-items-center">
-              <li class="nav-item">
-                <a href="#" class="nav-link" aria-current="page">Hem</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link active">Produkter</a>
-              </li>
-              <li class="navbar-brand">
-                <a class="nav-brand" href="/"
-                  ><img
-                    src="./images/logo.png"
-                    alt="Bootstrap"
-                    width="100"
-                    height="100"
-                /></a>
-              </li>
-              <li class="nav-item"><a href="#" class="nav-link">Om oss</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">Recept</a></li>
-              <li class="nav-item">
-                <a href="cart.html" class="nav-link">
-                  <div class="cart nav-item">
-                    <i class="bi bi-cart2"></i>
-                    <div
-                      id="cart-amount"
-                      class="cart-amount rounded-circle d-flex justify-content-center align-items-center bg-pastel-red text-light top-0 end-0 fs-7 fw-semibold"
-                    >
-                      0
-                    </div>
+      <nav
+        class="navbar d-flex fixed-top navbar-expand-md bg-white flex-wrap justify-content-between mb-4 border-bottom"
+      >
+        <a class="nav-brand mx-3 d-md-none mx-3" href="/"
+          ><img
+            src="./images/logo2.webp"
+            alt="Brand Logo"
+            width="150"
+            height="80"
+        /></a>
+        <button
+          class="navbar-toggler mx-3"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbar"
+          aria-controls="navbar"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          id="navbar"
+          class="collapse navbar-collapse justify-content-center"
+        >
+          <ul class="navbar-nav fw-semibold align-items-center">
+            <li class="nav-item">
+              <a href="/" class="nav-link active" aria-current="page">Hem</a>
+            </li>
+            <li class="nav-item">
+              <a href="store.html" class="nav-link">Produkter</a>
+            </li>
+            <li class="navbar-brand mx-3 d-none d-md-block">
+              <a class="nav-brand" href="/"
+                ><img
+                  src="./images/logo2.webp"
+                  alt="Brand Logo"
+                  width="151"
+                  height="80"
+              /></a>
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">Om oss</a>
+            </li>
+            <li class="nav-item">
+              <a href="recipes.html" class="nav-link">Recept</a>
+            </li>
+            <li class="nav-item">
+              <a href="cart.html" class="nav-link">
+                <div class="cart nav-item">
+                  <i class="bi bi-cart2"></i>
+                  <div
+                    id="cart-amount"
+                    class="cart-amount rounded-circle d-flex justify-content-center align-items-center bg-pastel-red text-light top-0 end-0 fs-7 fw-semibold"
+                  >
+                    0
                   </div>
-                </a>
-              </li>
-            </ul>
-            <!-- Left links -->
-          </div>
-          <!-- Collapsible wrapper -->
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
-        <!-- Container wrapper -->
       </nav>
     </header>
     <main>
