--- a/recipes.html
+++ b/recipes.html
@@ -8,29 +8,22 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-      async
-    />
+
     <!-- Bootstrap CSS v5.2.1 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
-      async
     />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <script src="storeitems.js"></script>
-    <script src="store.js" async></script>
   </head>
 
-  <body id="cart">
+  <body>
     <header>
       <nav
         class="navbar d-flex fixed-top navbar-expand-md bg-white flex-wrap justify-content-between mb-4 border-bottom"
@@ -80,7 +73,7 @@
               <a href="recipes.html" class="nav-link">Recept</a>
             </li>
             <li class="nav-item">
-              <a href="cart.html" class="nav-link active">
+              <a href="cart.html" class="nav-link">
                 <div class="cart nav-item">
                   <i class="bi bi-cart2"></i>
                   <div
@@ -96,94 +89,10 @@
         </div>
       </nav>
     </header>
-    <main>
-      <div class="container">
-        <div class="row w-100">
-          <div class="col-lg-12 col-md-12 col-12">
-            <h3 class="display-5 mb-2 text-center">Kundvagn</h3>
-            <p class="mb-5 text-center">
-              <i class="text-info font-weight-bold">3</i> varor i din kundvagn
-            </p>
-            <table class="table table-condensed table-responsive shopping-cart">
-              <thead>
-                <tr>
-                  <th style="width: 60%">Produkt</th>
-                  <th style="width: 12%">Pris</th>
-                  <th style="width: 10%">Antal</th>
-                  <th style="width: 16%"></th>
-                </tr>
-              </thead>
-              <tbody class="shopping-cart-items"></tbody>
-            </table>
-            <div class="float-end text-end">
-              <h4>Totalt:</h4>
-              <h1 class="cart-total-price">$99.00</h1>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 d-flex align-items-center">
-          <div class="col-sm-6 order-md-2 text-end">
-            <a
-              href="#"
-              class="btn btn-primary mb-4 btn-lg pl-5 pr-5 checkout-button"
-              >Checkout</a
-            >
-          </div>
-          <div class="col-sm-6 mb-3 mb-m-1 order-md-1 text-md-start">
-            <a href="store.html">
-              <i class="fas fa-arrow-left mr-2"></i> Continue Shopping</a
-            >
-          </div>
-        </div>
-      </div>
-    </main>
+    <main></main>
     <footer>
       <!-- place footer here -->
     </footer>
-    <template id="cart-item-template">
-      <tr class="shopping-cart-item">
-        <td data-th="Product">
-          <div class="row">
-            <div class="col-md-3 text-start">
-              <img
-                src=""
-                alt=""
-                class="img-fluid d-none d-md-block rounded mb-2 shadow cart-item-image"
-              />
-            </div>
-            <div class="col-md-9 text-start mt-sm-2">
-              <h4 class="cart-item-title"></h4>
-              <p class="font-weight-light cart-item-category"></p>
-            </div>
-          </div>
-        </td>
-        <td data-th="Price" class="cart-item-price"></td>
-        <td data-th="Quantity">
-          <input
-            type="number"
-            class="form-control form-control-lg text-center cart-item-quantity-input"
-            value=""
-            aria-label="Item amount"
-          />
-        </td>
-        <td class="actions" data-th="">
-          <div class="text-end">
-            <button
-              class="btn btn-white border-secondary bg-white btn-md mb-2"
-              aria-label="Update cart item"
-            >
-              <i class="fas fa-sync"></i>
-            </button>
-            <button
-              class="btn btn-white border-secondary bg-white btn-md mb-2 delete-cart-item"
-              aria-label="Delete cart item"
-            >
-              <i class="fas fa-trash"></i>
-            </button>
-          </div>
-        </td>
-      </tr>
-    </template>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
