--- a/cart.html
+++ b/cart.html
@@ -35,7 +35,7 @@
       <nav
         class="navbar d-flex fixed-top navbar-expand-md bg-white flex-wrap justify-content-between mb-4 border-bottom"
       >
-        <a class="nav-brand mx-3 d-md-none mx-3" href="/"
+        <a class="nav-brand mx-3 d-md-none mx-3" href="index.html"
           ><img
             src="./images/logo2.webp"
             alt="Brand Logo"
@@ -59,13 +59,13 @@
         >
           <ul class="navbar-nav fw-semibold align-items-center">
             <li class="nav-item">
-              <a href="/" class="nav-link" aria-current="page">Hem</a>
+              <a href="index.html" class="nav-link" aria-current="page">Hem</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link active">Produkter</a>
             </li>
             <li class="navbar-brand mx-3 d-none d-md-block">
-              <a class="nav-brand" href="/"
+              <a class="nav-brand" href="index.html"
                 ><img
                   src="./images/logo2.webp"
                   alt="Brand Logo"
@@ -85,7 +85,7 @@
                   <i class="bi bi-cart2"></i>
                   <div
                     id="cart-amount"
-                    class="cart-amount rounded-circle d-flex justify-content-center align-items-center bg-pastel-red text-light top-0 end-0 fs-7 fw-semibold"
+                    class="cart-amount rounded-circle d-flex justify-content-center align-items-center bg-pastel-red text-white top-0 end-0 fs-7 fw-semibold"
                   >
                     0
                   </div>
