--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -25,7 +29,7 @@
       <nav
         class="navbar d-flex fixed-top navbar-expand-md bg-white flex-wrap justify-content-between mb-4 border-bottom"
       >
-        <a class="nav-brand mx-3 d-md-none mx-3" href="/"
+        <a class="nav-brand mx-3 d-md-none mx-3" href="index.html"
           ><img
             src="./images/logo2.webp"
             alt="Brand Logo"
@@ -49,13 +53,15 @@
         >
           <ul class="navbar-nav fw-semibold align-items-center">
             <li class="nav-item">
-              <a href="/" class="nav-link active" aria-current="page">Hem</a>
+              <a href="index.html" class="nav-link active" aria-current="page"
+                >Hem</a
+              >
             </li>
             <li class="nav-item">
               <a href="store.html" class="nav-link">Produkter</a>
             </li>
             <li class="navbar-brand mx-3 d-none d-md-block">
-              <a class="nav-brand" href="/"
+              <a class="nav-brand" href="index.html"
                 ><img
                   src="./images/logo2.webp"
                   alt="Brand Logo"
