--- a/recipes.html
+++ b/recipes.html
@@ -28,7 +28,7 @@
       <nav
         class="navbar d-flex fixed-top navbar-expand-md bg-white flex-wrap justify-content-between mb-4 border-bottom"
       >
-        <a class="nav-brand mx-3 d-md-none mx-3" href="/"
+        <a class="nav-brand mx-3 d-md-none mx-3" href="index.html"
           ><img
             src="./images/logo2.webp"
             alt="Brand Logo"
@@ -52,13 +52,13 @@
         >
           <ul class="navbar-nav fw-semibold align-items-center">
             <li class="nav-item">
-              <a href="/" class="nav-link" aria-current="page">Hem</a>
+              <a href="index.html" class="nav-link" aria-current="page">Hem</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link active">Produkter</a>
+              <a href="store.html" class="nav-link">Produkter</a>
             </li>
             <li class="navbar-brand mx-3 d-none d-md-block">
-              <a class="nav-brand" href="/"
+              <a class="nav-brand" href="index.html"
                 ><img
                   src="./images/logo2.webp"
                   alt="Brand Logo"
@@ -70,7 +70,7 @@
               <a href="about.html" class="nav-link">Om oss</a>
             </li>
             <li class="nav-item">
-              <a href="recipes.html" class="nav-link">Recept</a>
+              <a href="recipes.html" class="nav-link active">Recept</a>
             </li>
             <li class="nav-item">
               <a href="cart.html" class="nav-link">
