--- a/store.html
+++ b/store.html
@@ -38,7 +38,7 @@
       <nav
         class="navbar d-flex fixed-top navbar-expand-md bg-white flex-wrap justify-content-between mb-4 border-bottom"
       >
-        <a class="nav-brand mx-3 d-md-none mx-3" href="/"
+        <a class="nav-brand mx-3 d-md-none mx-3" href="index.html"
           ><img
             src="./images/logo2.webp"
             alt="Brand Logo"
@@ -62,13 +62,13 @@
         >
           <ul class="navbar-nav fw-semibold align-items-center">
             <li class="nav-item">
-              <a href="/" class="nav-link" aria-current="page">Hem</a>
+              <a href="index.html" class="nav-link" aria-current="page">Hem</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link active">Produkter</a>
             </li>
             <li class="navbar-brand mx-3 d-none d-md-block">
-              <a class="nav-brand" href="/"
+              <a class="nav-brand" href="index.html"
                 ><img
                   src="./images/logo2.webp"
                   alt="Brand Logo"
