--- a/store.html
+++ b/store.html
@@ -116,6 +116,7 @@
             class="card-img-top rounded-4 store-item-image"
             width="376"
             height="252"
+            style="height: auto"
             aria-label="Product Image"
             src=""
             alt="Card image cap"
